--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^1.2.0",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-picker-select": "^6.3.3",
+    "react-native-table-component": "^1.2.1",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.1",
     "validator": "^11.1.0"
